# claude-signal-integration

./: .coveragerc  .env  .gsd-project  DEPLOYMENT.md  README.md  com.user.signal-claude-bot.plist  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  verify-deployment.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: coverage.yml  test.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  TEST-AUDIT.md  config.json
.planning-signal/: SIGNAL-STATE.md
config/: daemon.json
tests/: README.md  coverage_report.txt  test_approval_commands.py  test_approval_detector.py  test_approval_manager.py  test_approval_workflow.py  test_attachment_handler.py  test_auth.py  test_claude_bridge.py  test_claude_orchestrator.py  test_claude_parser.py  test_claude_process.py  test_claude_responder.py  test_code_formatter.py  test_custom_command_flow.py  test_custom_command_integration.py  test_custom_command_registry.py  test_custom_command_syncer.py  test_custom_commands.py  test_daemon.py  test_daemon_advanced_features.py  test_diff_processor.py  test_diff_renderer.py  test_emergency_approval_integration.py  test_emergency_auto_approver.py  test_emergency_auto_committer.py  test_emergency_commands.py  test_emergency_mode.py  test_lifecycle.py  test_message_buffer.py  test_notification_categorizer.py  test_notification_commands.py  test_notification_formatter.py  test_notification_manager.py  test_notification_preferences.py  test_queue.py  test_rate_limiter.py  test_reconnection.py  test_recovery.py  test_session_commands.py  (+7 more)
(+201 files in other folders)
