[project]
name = "signal-claude-bot"
version = "0.1.0"
description = "Signal bot for remote Claude Code development"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "websockets==16.0",
    "aiohttp>=3.9",
    "pydantic>=2.12.5",
    "structlog==25.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signal"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
